Bug 539784 crash [@ nsMsgXFViewThread::AddHdr(nsIMsgDBHdr*, int, unsigned int&, nsIMsgDBHdr**)] manipulating messages in virtual folder. r/sr=bienvenu